crates/oxc_css_parser/tests/error/scss/at-rule/debug/incomplete-expression.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `)`, but found `;`
  ┌─ incomplete-expression.scss:1:13
  │
1 │ @debug("foo";
  │             ^


